第二次提交

--- a/songListUp.html
+++ b/songListUp.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/songListRecomand.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
-    <link rel="stylesheet" href="./css/indexCommon.css">
 </head>
 
 <body>
@@ -21,10 +20,10 @@
     <div class="w clearfix container">
         <!-- 左边导航栏 -->
         <ul class="fl listL fz14">
-            <li class="current"><a href="songListRecomand.html">推荐</a></li>
+            <li><a href="songListRecomand.html">推荐</a></li>
             <li><a href="songListHot.html">最热</a></li>
             <li><a href="songListHotCollection.html">热藏</a></li>
-            <li><a href="songListUp.html">飙升</a></li>
+            <li class="current"><a href="songListUp.html">飙升</a></li>
         </ul>
         <!-- 右边歌单栏 -->
         <ul class="fl listR">
@@ -630,34 +629,6 @@
         </ul>
     </div>
     <!-- 页面主体部分 -->
-    <div class="footer">
-        <div class="links clearfix">
-            <ul class="clearfix">
-                <li><a href="#">关于酷狗</a><span>|</span></li>
-                <li><a href="#">监督举报</a><span>|</span></li>
-                <li><a href="#">商务合作</a><span>|</span></li>
-                <li><a href="#">广告服务</a><span>|</span></li>
-                <li><a href="#">投诉指引</a><span>|</span></li>
-                <li><a href="#">隐私政策</a><span>|</span></li>
-                <li><a href="#">儿童隐私政策</a><span>|</span></li>
-                <li><a href="#">用户服务协议</a><span>|</span></li>
-                <li><a href="#">酷狗音乐人</a><span>|</span></li>
-                <li><a href="#">酷狗直通车</a><span>|</span></li>
-                <li><a href="#">招聘信息</a><span>|</span></li>
-                <li><a href="#">客服中心</a><span>|</span></li>
-                <li><a href="#">用户体验提升计划</a></li>
-            </ul>
-        </div>
-        <div class="copyRights">
-            <div>我们致力于推动网络正版音乐发展，相关版权合作请联系copyrights@kugou.com</div>
-            <div class="notallowUserCopy">信息网络传播视听节目许可证 1910564 增值电信业务经营许可证粤B2-20060339&nbsp;&nbsp;&nbsp;<a href="#">粤ICP备09017694号</a><span class="footerIcon"><a href="#"></a></span>
-            </div>
-            <div class="notallowUserCopy">广播电视节目制作经营许可证（粤）字第01270号&nbsp;&nbsp;&nbsp;营业性演出许可证穗天演440106026&nbsp;&nbsp;&nbsp;<a href="#">营业执照</a> </div>
-            <div class="notallowUserCopy">穗公网监备案证第44010650010167&nbsp;&nbsp;&nbsp;互联网药品信息服务资格证编号（粤）-非经营性-2012-0018&nbsp;&nbsp;&nbsp;<a href="#">粤公网安备44010602000141号</a></div>
-            <div><a href="#">互联网不良信息举报中心：www.12377.cn&nbsp;&nbsp;&nbsp;</a>酷狗不良信息举报邮箱：jubao_music@kugou.net &nbsp;&nbsp;客服邮箱：kefu@kugou.com</div>
-            <div class="notallowUserCopy">Copyright&nbsp;&nbsp;©&nbsp;&nbsp;2004-2021 KuGou-Inc.All Rights Reserved</div>
-        </div>
-    </div>
     <!-- script部分 -->
     <script src="./js/songListRecomand.js"></script>
 </body>
